# udp-viewer

./: CHANGELOG.md  LICENSE  README.md  README_de.md  README_step10_entryfix.txt  build_dmg.sh  build_exe.bat  freeze_entry.py  freeze_setup.py  freeze_setup_dmg.py  freeze_setup_win.py  install.sh  pyproject.toml  run.py  run_udp_log_viewer.py  settings.py  udp_log_20260217_180138.txt  udp_log_20260218_100312.txt  udp_log_20260218_104432.txt  udp_log_20260218_125913.txt  udp_log_20260218_192644.txt  udp_log_20260218_192651.txt  udp_log_20260218_194045.txt  udp_log_20260326_232859.txt
_old_scripts/: run.sh  setup.sh  setup_venv.sh
assets/: README.md
docs/: BUILD_AND_PACKAGING_REFERENCE_de.md  BUILD_AND_PACKAGING_REFERENCE_en.md  BUILD_DMG_GUIDE.md  BUILD_DMG_GUIDE_de.md  CONFIGURATION_REFERENCE_de.md  CONFIGURATION_REFERENCE_en.md  DOCUMENTATION_en.md  DOKUMENTATION_de.md  PHASENPLAN_de.md  PHASENPLAN_en.md  RELEASE_0.15.3.md  RELEASE_0.15.3_de.md  RELEASE_0.16.0.md  RELEASE_0.16.0_de.md  RELEASE_0.16.1.md  RELEASE_0.16.1_de.md  RELEASE_0.16.2.md  RELEASE_0.16.2_de.md  RELEASE_0.16.3.md  RELEASE_0.16.3_de.md  RELEASE_0.16.4.md  RELEASE_0.16.4_de.md  RELEASE_0.17.0.md  RELEASE_0.17.0_de.md  SCENARIOS_de.md  SCENARIOS_en.md  SCENARIO_IMAGES_de.md  SCENARIO_IMAGES_en.md  SIMULATION_REFERENCE_de.md  SIMULATION_REFERENCE_en.md  SUPPORTED_CSV_INPUT_FORMATS_de.md  SUPPORTED_CSV_INPUT_FORMATS_en.md  USER_GUIDE_de.md  USER_GUIDE_en.md
scripts/: bootstrap_macos_linux.sh  bootstrap_windows.bat  bootstrap_windows.ps1  build_windows_installer.bat  common.env  dev_run.ps1  (+3 more)
(+98 files in other folders)
