[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "udp-log-viewer"
version = "0.1.0"
description = "Lightweight UDP log viewer (PyQt5) for ESP32 text logs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "PyQt5>=5.15",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "mypy>=1.10",
  "pre-commit>=3.7"
]

[project.scripts]
udp-log-viewer = "udp_log_viewer.main:main"